--- a/Labo1/nbproject/project.properties
+++ b/Labo1/nbproject/project.properties
@@ -27,9 +27,11 @@ dist.dir=dist
 dist.jar=${dist.dir}/Labo1.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.bcprov-jdk18on-176.jar=..\\bcprov-jdk18on-176.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.bcprov-jdk18on-176.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
